[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hunt-framework"
version = "0.4.10"
description = "A Python web framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "syk0" }]
keywords = ["web", "framework", "orm", "routing", "asgi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "click>=8.1,<9.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "aiomysql>=0.2,<1.0",
    "asyncpg>=0.29,<1.0",
    "ipython>=8.0,<10.0",
    "bcrypt>=4.0,<5.0",
    "pymysql>=1.1,<2.0",
    "httpx>=0.27",
    "markdown>=3.4,<4.0",
    "nh3>=0.2",
    "pyotp>=2.9,<3.0",
    "cryptography>=41.0,<47.0",
]

[project.urls]
Homepage = "https://hunt-framework.com"
Documentation = "https://hunt-framework.com/docs/installation"
Repository = "https://github.com/hunt-core/hunt"
"Bug Tracker" = "https://github.com/hunt-core/hunt/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
hunt = "hunt.console.kernel:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/hunt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "RUF"]
ignore = [
    "E501",   # line too long — formatter handles this
    "B008",   # function calls in default arguments (used intentionally in some places)
    "UP007",  # X | Y union syntax — kept as Optional/Union for clarity in public APIs
]

[tool.ruff.lint.isort]
known-first-party = ["hunt"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.12",
    "testcontainers[mysql,postgres]>=4.14.2",
]
